tests/macros/editor/mask.stderr
error: option `mask` does not exist for kind `editor`
 --> $DIR/mask.rs:2:46
  |
2 |     let q = inquisition::questions![Editor { mask: todo!() }];
  |                                              ^^^^
