tests/macros/editor/mask.rs
fn main() {
    let q = inquisition::questions![Editor { mask: todo!() }];
}
